--- a/4st/app/src/main/AndroidManifest.xml
+++ b/4st/app/src/main/AndroidManifest.xml
@@ -5,11 +5,15 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,6 +24,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme._4st"
         tools:targetApi="31">
+        <activity
+            android:name=".Recycler"
+            android:exported="false" />
+        <activity
+            android:name=".CamActive"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
